Fixed scrool homt title bottom

--- a/services.html
+++ b/services.html
@@ -101,6 +101,7 @@
             <h2>Your success story begins here</h2>
             <div class="services-description-text">
                 <div class="services-description-list">
+                    <hr>
                     <p>Three fundamental conditions for gaining success in the Japanese market:</p>
                     <ol>
                         <li>Professional localization</li>
@@ -128,10 +129,10 @@
 
             <div class="col-sm-12 col-md-6 service-container">
                 <div class="sevice-wrapper" data-css-animate="trigger">
-                    <h2>ICO in Japan</h2>
+                    <h2>Cloudfunding</h2>
                     <article>
                         <ol>
-                            <li>ICO strategy and planning</li>
+                            <li>ICO Strategy and Planning</li>
                             <li>Fundraising via Pre-sale</li>
                             <li>Fundraising via ICO</li>
                             <li>Putting on the listings of Japanese exchanges</li>
@@ -146,9 +147,9 @@
                     <h2>Marketing</h2>
                     <article>
                         <ol>
-                            <li>Localization (Whitepaper, web, marketing materials)</li>
+                            <li>Localization (Whitepaper, Websites, Marketing materials)</li>
                             <li>Online advertisement in Japan</li>
-                            <li>Promotion to Japanese «angel investors»</li>
+                            <li>Promotion to Japanese Angel Investors</li>
                             <li>Press releases on Japanese media</li>
                             <li>Public Relations</li>
                             <li>Social media control</li>
@@ -162,7 +163,7 @@
                     <article>
                         <ol>
                          <li>Legal consultation</li>
-                         <li>Sales Channel Development after ICO</li>
+                         <li>Sales Channel Development</li>
                          <li>Long Term Business Development</li>
                          <li>Partner Search</li>
                          <li>Sales support</li>
