Fixed scrool homt title bottom

--- a/services.html
+++ b/services.html
@@ -99,6 +99,7 @@
     <section class="services-description">
         <div class="cj-container">
             <h2>Your success story begins here</h2>
+
             <div class="services-description-text">
                 <div class="services-description-list">
                     <hr>
@@ -107,21 +108,40 @@
                         <li>Professional localization</li>
                         <li>Effective strategic planning</li>
                         <li>Willingness to follow the Japanese business rules</li>
-                    </ol>   
+                    </ol>
                 </div>
                 The Japanese market is one of the most dynamic and attractive markets, but it is not an easy task to conquer it. It does not matter what your company reached and if it has the name in the world or not. The strategy that you have used earlier will not bring you any benefit in Japan. Rather on the contrary. In the best case it will slow down the promotion of the product, how it happened with Uber and FaceBook, which could not fully capture Japanese market. In the worst case you will have to cease your activity, how it happened with eBay. Other, equally well-known companies such as Amazon, Apple, Starbucks were able to stay in the Japanese market and even take a leadership position just because they have changed their strategy. They have adapted to the specificity of the Japanese market, its culture and accepted business rules.
             </div>
         </div>
     </section><!-- DESCRIPTION -->
 
+
+    <section class="services-steps">
+        <div class="cj-container">
+            <div class="row row no-gutters">
+                <div class="col-md-6 services-moto background-color-grey">
+                    <hr>    
+                    <p>Partnerships with CoinJapan is your guarantee of entering Japanese market for the providing of hyper-growth your product. We can help to raise funds for you because we understand the market, know its features, requirements and business rules.</p>
+                    <hr>
+                </div>
+                <div class="col-md-6 steps-img">
+                    <img src="img/DSC_3387ee.jpg" alt="room">
+                </div>
+            </div>
+        </div>
+    </section><!-- STEPS -->
+
+
+
     <section class="ather-services">
         <div class="cj-container">
+            <h2 class="section-header" data-css-animate="trigger">What we can do for you</h2>
             <div class="ather-services-wrapper row no-gutters">
-               <div class="col-sm-12 col-md-6 service-container">
+             <div class="col-sm-12 col-md-6 service-container">
                 <div class="sevice-wrapper" data-css-animate="trigger">
                     <h2>Strategic Advisory</h2>
                     <article>
-                        <p>On the first stage of our cooperation we will help you to appraise the strengths, weaknesses, opportunities and threats of your project. After the appraisal our experts will help you to develop “must do” activities plan to solve problems and use advantages. It allows to prepare for entering in the investment market. Their recommendations are based on research of financial reports, market trends, and assessment of competitors.
+                        <p>On the first stage of our cooperation we will help you to appraise the strengths, weaknesses, opportunities and threats of your project. After the appraisal our experts will help you to develop “must do” activities plan to solve problems and use advantages. It allows to prepare for entering in the investment market.
                         </p>
                     </article>
                 </div>
@@ -162,42 +182,108 @@
                     <h2>Support</h2>
                     <article>
                         <ol>
-                         <li>Legal consultation</li>
-                         <li>Sales Channel Development</li>
-                         <li>Long Term Business Development</li>
-                         <li>Partner Search</li>
-                         <li>Sales support</li>
-                     </ol>
-                 </article>
-             </div>
-         </div>
-     </div>
- </div>
+                           <li>Legal consultation</li>
+                           <li>Sales Channel Development</li>
+                           <li>Long Term Business Development</li>
+                           <li>Partner Search</li>
+                           <li>Sales support</li>
+                       </ol>
+                   </article>
+               </div>
+           </div>
+       </div>
+   </div>
 </section><!-- ATHER SERVICES -->
 
-<section class="services-conditions">
+<section class="projects-in-numbers">
     <div class="cj-container">
-        <article class="conditions-main-description">
-            <p>Partnerships with CoinJapan is your guarantee of entering Japanese market for the providing of hyper-growth your product. We can help to raise funds for you because we understand the market, know its features, requirements and business rules. </p>
-            <p>There are three components that are the basis of our confidence in the successful attraction of Japanese investment to your business:</p>
-        </article>
-        <div>
-            <ul>
-                <li>Promotion of what is interesting for Japanese investors</li>
-                <li> Using of methods adopted in Japanese business</li>
-                <li>The growth and reputation of our company are related to the number of successful ICO</li>
-            </ul>
-            <p>A wise decision to cooperate with CoinJapan will open your business for investment from Japan. We are sure in our capabilities and can create solutions for the growth of your business.</p>
+        <h2 class="section-header" data-css-animate="trigger">Projects in numbers</h2>
+        <div class="row projects-wrapper ">
+            <div class="col-sm-12 col-md-4 project">
+                <h3>Collected funds</h3>
+                <p class="partners-number-large">
+                    <span class="achivment-amount" data-projectsAutocount="field" data-from="1" data-to="15">15</span>
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4 project middle-project-border">
+                <h3>Collected funds</h3>
+                <p class="partners-number-large partners-number-gradient">
+                    <span class="achivment-amount" data-projectsAutocount="field" data-from="1" data-to="15">15</span>
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4 project">
+                <h3>Collected funds</h3>
+                <p class="partners-number-medium">
+                    $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
+                    <span class="project-description">Million</span>
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4 project">
+                <h3>Collected funds</h3>
+                <p class="partners-number-medium">
+                    $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
+                    <span class="project-description">Million</span>
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4 project middle-project-border">
+                <h3>Collected funds</h3>
+                <p class="partners-number-medium">
+                    $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
+                    <span class="project-description">Million</span>
+                </p>
+            </div>
+            <div class="col-sm-12 col-md-4 project">
+                <h3>Collected funds</h3>
+                <p class="partners-number-medium">
+                    $<span class="achivment-amount" data-projectsAutocount="field" data-from="267" data-to="400">400</span>
+                    <span class="project-description">Million</span>
+                </p>
+            </div>
         </div>
     </div>
-</section><!-- CONDITIONS -->
+</section><!-- PROJECTS-IN-NUBMBERS -->
+
+<section class="services-partners">
+    <div class="cj-container">
+        <h2 class="section-header" data-css-animate="trigger">Our clients</h2>
+
+        <div class="partners-carousel-container" data-css-animate="trigger">
+            <div class="owl-carousel">
+                <div class="row no-gutters">
+                    <div class="col-12 partner-item">
+                        <img src="img/partners-carousel/paybis.png" alt="paybis">
+                    </div>
+                    <div class="col-12 partner-item">
+                        <img src="img/partners-carousel/xb-software.png" alt="xb-software">
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-12 partner-item">
+                        <img src="img/partners-carousel/microsoftazure.png" alt="microsoftazure">
+                    </div>
+                    <div class="col-12 partner-item">
+                        <img src="img/partners-carousel/blockweather.png" alt="blockweather">
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-12 partner-item">
+                        <img src="img/partners-carousel/growth.png" alt="growth">
+                    </div>
+                    <div class="col-12 partner-item">
+                        <img src="img/partners-carousel/coinbazz.png" alt="coinbazz">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 <section class="bottom-links">
     <div class="cj-container background-color-grey">
         <div class="bottom-links-container">
             <div class="link-item-wrapper" data-css-animate="trigger">
-             <a href="services.html">
+               <a href="services.html">
                 <img src="img/links/about-title-bg.jpg" alt="A lamp">
                 <span>About us</span>
             </a>
