--- a/services.html
+++ b/services.html
@@ -24,7 +24,6 @@
     <script type="text/javascript" src="js/lib/owl.carousel.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     
-
     <script type="text/javascript" src="js/lib/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lib/owl.carousel.min.js"></script>
@@ -65,7 +64,6 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a class="active-nav-item" href="services.html">Services</a></li>
-                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="#">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
                         <li><a href="contacts.html">Contacts</a></li>
@@ -84,7 +82,7 @@
         </div>
     </header>
 
-    <section class="page-title parallax-window services-title-bg" data-parallax="scroll" data-image-src="img/sistema-de-gestao.png">
+    <section class="page-title services-title-bg">
         <div class="page-titke-overlay">
             <div class="cj-container">
                 <h1>Services</h1>
@@ -137,7 +135,7 @@
         <div class="cj-container">
             <h2 class="section-header" data-css-animate="trigger">What we can do for you</h2>
             <div class="ather-services-wrapper row no-gutters">
-             <div class="col-sm-12 col-md-6 service-container">
+               <div class="col-sm-12 col-md-6 service-container">
                 <div class="sevice-wrapper" data-css-animate="trigger">
                     <h2>Strategic Advisory</h2>
                     <article>
@@ -182,23 +180,23 @@
                     <h2>Support</h2>
                     <article>
                         <ol>
-                           <li>Legal consultation</li>
-                           <li>Sales Channel Development</li>
-                           <li>Long Term Business Development</li>
-                           <li>Partner Search</li>
-                           <li>Sales support</li>
-                       </ol>
-                   </article>
-               </div>
-           </div>
-       </div>
-   </div>
+                         <li>Legal consultation</li>
+                         <li>Sales Channel Development</li>
+                         <li>Long Term Business Development</li>
+                         <li>Partner Search</li>
+                         <li>Sales support</li>
+                     </ol>
+                 </article>
+             </div>
+         </div>
+     </div>
+ </div>
 </section><!-- ATHER SERVICES -->
 
 <section class="projects-in-numbers">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">Projects in numbers</h2>
-        <div class="row projects-wrapper ">
+        <div class="row projects-wrapper no-gutters" data-projectsAutocount="container">
             <div class="col-sm-12 col-md-4 project">
                 <h3>Collected funds</h3>
                 <p class="partners-number-large">
@@ -246,44 +244,45 @@
 <section class="services-partners">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">Our clients</h2>
-
-        <div class="partners-carousel-container" data-css-animate="trigger">
-            <div class="owl-carousel">
-                <div class="row no-gutters">
-                    <div class="col-12 partner-item">
-                        <img src="img/partners-carousel/paybis.png" alt="paybis">
-                    </div>
-                    <div class="col-12 partner-item">
-                        <img src="img/partners-carousel/xb-software.png" alt="xb-software">
-                    </div>
-                </div>
-                <div class="row no-gutters">
-                    <div class="col-12 partner-item">
-                        <img src="img/partners-carousel/microsoftazure.png" alt="microsoftazure">
-                    </div>
-                    <div class="col-12 partner-item">
-                        <img src="img/partners-carousel/blockweather.png" alt="blockweather">
-                    </div>
-                </div>
-                <div class="row no-gutters">
-                    <div class="col-12 partner-item">
-                        <img src="img/partners-carousel/growth.png" alt="growth">
-                    </div>
-                    <div class="col-12 partner-item">
-                        <img src="img/partners-carousel/coinbazz.png" alt="coinbazz">
-                    </div>
-                </div>
+        <div class="row no-gutters">
+            <div class="col-md-4 client-img-wrapper">
+                <img src="img/osa.png">
+            </div>
+            <div class="col-md-4 client-img-wrapper">
+                <img src="img/logo_2.svg">
+            </div>
+            <div class="col-md-4 client-img-wrapper">
+                <img src="img/Engagement-Token-Logo-2.png">
             </div>
         </div>
     </div>
 </section>
 
+<section class="clients-reviews">
+    <div class="cj-container">
+        <h2 class="section-header" data-css-animate="trigger">What our clients say</h2>
+        <article class="review-item">
+            <p class="client-review">
+                Thanks to the rapid response of our cybersecurity partners - Hacken, the phishing attack was repelled and all efforts of the criminals were eliminated in no time. Only 2 hours passed from the start of the work of phishing sites to the moment of their disconnection.
+            </p>
+            <div class="client-info">
+                <div class="client-photo-wrapper">
+                    <img src="img/max.png" >
+                </div>
+                <div>
+                    <p class="client-name">Maxim Prasolov</p>
+                    <p class="client-position">Neuromation</p>
+                </div>
+            </div>
+        </article>
+    </div>
+</section>
 
 <section class="bottom-links">
     <div class="cj-container background-color-grey">
         <div class="bottom-links-container">
             <div class="link-item-wrapper" data-css-animate="trigger">
-               <a href="services.html">
+             <a href="services.html">
                 <img src="img/links/about-title-bg.jpg" alt="A lamp">
                 <span>About us</span>
             </a>
@@ -291,7 +290,7 @@
         <div class="link-item-wrapper" data-css-animate="trigger">
             <a href="projecs.html">
                 <img src="img/links/DSC_3244.jpg" alt="Toy">
-                <span>Projects</span>
+                <span>Partners</span>
             </a>
         </div>
     </div>
