--- a/contacts.html
+++ b/contacts.html
@@ -62,7 +62,6 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="projects.html">Projects</a></li>
                         <li><a href="#">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
                         <li><a class="active-nav-item" href="contacts.html">Contacts</a></li>
@@ -157,6 +156,12 @@
     		</div>
     	</div>
     </section><!-- CONTACT-FORM -->
+
+
+    <span id="mp0">ссылка 1</span>
+    <span href="#" id="mp1">ссылка 2</span>
+    <span href="#" id="mp2">ссылка 3</span>
+
 
     <section id="map" class="contacts-map">
     	
