Fixed scrool homt title bottom

--- a/services.html
+++ b/services.html
@@ -131,10 +131,13 @@
 
     <section class="ather-services">
         <div class="cj-container">
-            <h2 class="section-header" data-css-animate="trigger">What we can do for you</h2>
+            <h2 class="section-header"  data-css-animate="trigger">What we can do for you</h2>
             <div class="ather-services-wrapper row no-gutters">
                <div class="col-sm-12 col-md-6 service-container">
-                <div class="sevice-wrapper" data-css-animate="trigger">
+                <div class="sevice-wrapper" data-css-opacity-ather="item" data-css-animate="trigger">
+                    <div class="sevice-wrapper-overlay">
+                        
+                    </div>
                     <h2>Strategic Advisory</h2>
                     <article>
                         <p>On the first stage of our cooperation we will help you to appraise the strengths, weaknesses, opportunities and threats of your project. After the appraisal our experts will help you to develop “must do” activities plan to solve problems and use advantages. It allows to prepare for entering in the investment market.
@@ -144,7 +147,8 @@
             </div>
 
             <div class="col-sm-12 col-md-6 service-container">
-                <div class="sevice-wrapper" data-css-animate="trigger">
+                <div class="sevice-wrapper" data-css-opacity-ather="item" data-css-animate="trigger">
+                    <div class="sevice-wrapper-overlay"></div>
                     <h2>Cloudfunding</h2>
                     <article>
                         <ol>
@@ -159,7 +163,8 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 service-container">
-                <div class="sevice-wrapper" data-css-animate="trigger">
+                <div class="sevice-wrapper" data-css-opacity-ather="item" data-css-animate="trigger">
+                    <div class="sevice-wrapper-overlay"></div>
                     <h2>Marketing</h2>
                     <article>
                         <ol>
@@ -174,7 +179,8 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-6 service-container">
-                <div class="sevice-wrapper" data-css-animate="trigger">
+                <div class="sevice-wrapper" data-css-opacity-ather="item" data-css-animate="trigger">
+                    <div class="sevice-wrapper-overlay"></div>
                     <h2>Support</h2>
                     <article>
                         <ol>
