--- a/contacts.html
+++ b/contacts.html
@@ -93,6 +93,28 @@
         </div>        
     </section><!-- TITLE -->
 
+
+    <section class="addresses-container">
+        <div class="cj-container">
+            <h2 class="section-header">Contact Information</h2>
+            <div class="row no-gutters">
+                <div class="col-md-6 map-container">
+                    <div id="map" class="contacts-map"></div>
+                </div>
+                <div class="col-md-6 addresses">
+                    <div class="address-item">
+                        <h3>Kiev</h3>
+                        <p>Ukraine, 03067, Kiev, V. Gavela blvd, 4 office 20</p>
+                    </div>
+                    <div class="address-item">
+                        <h3>Mine</h3>
+                        <p>Address</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="our-contacts">
     	<div class="cj-container">
     		<div class="row our-contacts-wrapper">
@@ -163,9 +185,7 @@
     <span href="#" id="mp2">ссылка 3</span>
 
 
-    <section id="map" class="contacts-map">
-    	
-    </section><!-- CONTACTS-MAP -->
+
 
 <footer class="footer">
     <div class="footer-container">
